cmake_minimum_required(VERSION 3.23)
project(ctp2db)

set(CMAKE_CXX_STANDARD 17)
add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")

if (CMAKE_BUILD_TYPE AND CMAKE_BUILD_TYPE STREQUAL "Release")
    if (MSVC)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /wd4996 /wd4702 /wd4100")
    else ()
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter -O3")
    endif ()
    message(STATUS "Building release version, flags : ${CMAKE_CXX_FLAGS}...")
else ()
    if (MSVC)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /wd4996 /wd4702 /wd4100")
    else ()
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter -O0")
    endif ()
    message(STATUS "Building debug version, flags : ${CMAKE_CXX_FLAGS}...")
endif ()

add_subdirectory(ctp-wrapper)
add_subdirectory(ctp2pg)